--- a/src/LanBackup.WebApp/package.json
+++ b/src/LanBackup.WebApp/package.json
@@ -22,7 +22,7 @@
     "angular2-universal-polyfills": "~2.0.11",
     "aspnet-prerendering": "^2.0.0",
     "aspnet-webpack": "^1.0.26",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "~4.1.2",
     "css": "^2.2.1",
     "css-loader": "^0.26.1",
     "es6-shim": "^0.35.1",
@@ -33,7 +33,7 @@
     "font-awesome": "^4.7.0",
     "html-loader": "^0.4.4",
     "isomorphic-fetch": "^2.2.1",
-    "jquery": "^2.2.1",
+    "jquery": "~3.0.0",
     "json-loader": "^0.5.4",
     "jw-bootstrap-switch-ng2": "0.0.7",
     "ng2-appinsights": "^0.3.0",
